# websocket_chat

./: .gitignore  API_ENDPOINTS.md  ARCHITECTURE.md  Dockerfile  FRONTEND_GUIDE.md  SCHEMA.md  chat.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1218114348f8_initial.py
src/: database.py  dependencies.py  index.html  main.py  models.py  schemas.py  services.py  utility.py
src/routes/: auth.py  websocket.py
